# actions-cpp

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml  conan-stable.yml  conan-testing.yml  conan.yml
conan/: appveyor.yml  build.py  conanfile.py
conan/test_package/: CMakeLists.txt  Main.cpp  conanfile.py
include/: Action.h
src/: Action.cpp
