cmake_minimum_required(VERSION 3.10)
# TODO: named this project here
project(action)

set(CMAKE_CXX_STANDARD 17)
message("XXXXXXXXXX CONAN_COMPILER ${CONAN_COMPILER}")
message("XXXXXXXXXX CONAN_COMPILER_VERSION ${CONAN_COMPILER_VERSION}")
message("XXXXXXXXXX CONAN_CXX_FLAGS ${CONAN_CXX_FLAGS}")
message("XXXXXXXXXX CONAN_C_FLAGS ${CONAN_C_FLAGS}")
message("XXXXXXXXXX CONAN_EXPORTED ${CONAN_EXPORTED}")
message("XXXXXXXXXX CONAN_IN_LOCAL_CACHE ${CONAN_IN_LOCAL_CACHE}")
message("XXXXXXXXXX CONAN_LIBCXX ${CONAN_LIBCXX}")
message("XXXXXXXXXX CONAN_SHARED_LINKER_FLAGS ${CONAN_SHARED_LINKER_FLAGS}")
set(CXXFLAGS "${CONAN_CXX_FLAGS} ${CXXFLAGS}")

find_package(GTest REQUIRED)

aux_source_directory(src ALL_SOURCES)

set(SOURCES ${ALL_SOURCES})
list(FILTER SOURCES EXCLUDE REGEX "^.*Test.cpp$")
add_library(${PROJECT_NAME} ${SOURCES})
target_include_directories(${PROJECT_NAME} PUBLIC include)

set(TEST_SOURCES ${ALL_SOURCES})
list(FILTER TEST_SOURCES INCLUDE REGEX "^.*Test.cpp$")
if(NOT "${TEST_SOURCES}" STREQUAL "")
    add_executable(${PROJECT_NAME}_test ${TEST_SOURCES})
    target_link_libraries(${PROJECT_NAME}_test GTest::GTest)
    enable_testing()
    add_test(NAME test COMMAND ${PROJECT_NAME}_test)
endif()
